Add `showFilterIds` query param to `/meta` endpoint
